--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ click==8.0.3
 colorama==0.4.4
 Django==3.2.9
 djangorestframework==3.12.4
+et-xmlfile==1.1.0
 mypy-extensions==0.4.3
 numpy==1.21.3
+openpyxl==3.0.9
 pandas==1.3.4
 pathspec==0.9.0
 platformdirs==2.4.0
